[package]
name = "game-cc"
description = "A game cruise control helper"
version = "0.1.0"
edition = "2024"
authors = ["Mike Matiunin <plugfox@gmail.com>"]
license = "MIT"

[lints.rust]
#dead_code = "allow"
#unused_variables = "allow"

[[bin]]
name = "main"
path = "bin/main.rs"

# cargo run --release
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
rand = "0.9.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Com",
    "Win32_Media_Speech",
    "Win32_Graphics_Gdi",
] }
